replace values with placeholders

--- a/daycare.html
+++ b/daycare.html
@@ -156,7 +156,7 @@
                 <div class="grid grid-3">
                     <div class="pricing-card card fade-in">
                         <h3>Basic Refresh</h3>
-                        <div class="pricing-amount">$25</div>
+                        <div class="pricing-amount">(BLANK)</div>
                         <div class="pricing-period">per dog</div>
                         <ul style="list-style: none; margin: var(--space-6) 0; text-align: left;">
                             <li style="padding: var(--space-2) 0;">✓ Gentle bath</li>
@@ -168,7 +168,7 @@
 
                     <div class="pricing-card card featured fade-in">
                         <h3>Full Spa Day</h3>
-                        <div class="pricing-amount">$50</div>
+                        <div class="pricing-amount">(BLANK)</div>
                         <div class="pricing-period">per dog</div>
                         <ul style="list-style: none; margin: var(--space-6) 0; text-align: left;">
                             <li style="padding: var(--space-2) 0;">✓ Everything in Basic</li>
@@ -182,7 +182,7 @@
 
                     <div class="pricing-card card fade-in">
                         <h3>VIP Pamper</h3>
-                        <div class="pricing-amount">$75</div>
+                        <div class="pricing-amount">(BLANK)</div>
                         <div class="pricing-period">per dog</div>
                         <ul style="list-style: none; margin: var(--space-6) 0; text-align: left;">
                             <li style="padding: var(--space-2) 0;">✓ Everything in Full</li>
