--- a/dog-profile.html
+++ b/dog-profile.html
@@ -157,7 +157,7 @@
                         <div class="icon">🛁</div>
                         <h3>Spa Day</h3>
                         <p>A relaxing afternoon of gentle grooming, a warm bath, and calming massage.</p>
-                        <div class="pricing-amount" style="margin-bottom: var(--space-4);">$50</div>
+                        <div class="pricing-amount" style="margin-bottom: var(--space-4);">(BLANK)</div>
                         <a href="#" class="btn btn-primary" style="width: 100%;">Gift a Spa Day</a>
                     </div>
 
@@ -166,7 +166,7 @@
                         <div class="icon">🌲</div>
                         <h3>Day Out</h3>
                         <p>A scenic hike or a trip to her favorite local park for some serious sniffing.</p>
-                        <div class="pricing-amount" style="margin-bottom: var(--space-4);">$65</div>
+                        <div class="pricing-amount" style="margin-bottom: var(--space-4);">(BLANK)</div>
                         <a href="#" class="btn btn-primary" style="width: 100%;">Fund an Adventure</a>
                     </div>
 
@@ -175,7 +175,7 @@
                         <div class="icon">🎁</div>
                         <h3>Care Package</h3>
                         <p>Her favorite bacon treats and a brand new squeaky tennis ball delivered to her kennel.</p>
-                        <div class="pricing-amount" style="margin-bottom: var(--space-4);">$25</div>
+                        <div class="pricing-amount" style="margin-bottom: var(--space-4);">(BLANK)</div>
                         <a href="#" class="btn btn-primary" style="width: 100%;">Send a Package</a>
                     </div>
                 </div>
