--- a/donate.html
+++ b/donate.html
@@ -79,16 +79,16 @@
                         </div>
 
                         <div class="donation-grid" style="margin-bottom: var(--space-8);">
-                            <div class="card donation-card" onclick="selectDonation(this, 15)">
-                                <div class="pricing-amount" style="font-size: var(--text-3xl);">$15</div>
+                            <div class="card donation-card" onclick="selectDonation(this, (BLANK))">
+                                <div class="pricing-amount" style="font-size: var(--text-3xl);">(BLANK)</div>
                                 <p style="font-size: var(--text-sm); margin: 0;">Care Package</p>
                             </div>
-                            <div class="card donation-card selected" onclick="selectDonation(this, 35)">
-                                <div class="pricing-amount" style="font-size: var(--text-3xl);">$35</div>
+                            <div class="card donation-card selected" onclick="selectDonation(this, (BLANK))">
+                                <div class="pricing-amount" style="font-size: var(--text-3xl);">(BLANK)</div>
                                 <p style="font-size: var(--text-sm); margin: 0;">Adventure Outing</p>
                             </div>
-                            <div class="card donation-card" onclick="selectDonation(this, 50)">
-                                <div class="pricing-amount" style="font-size: var(--text-3xl);">$50</div>
+                            <div class="card donation-card" onclick="selectDonation(this, (BLANK))">
+                                <div class="pricing-amount" style="font-size: var(--text-3xl);">(BLANK)</div>
                                 <p style="font-size: var(--text-sm); margin: 0;">Full Spa Day</p>
                             </div>
                             <div class="card donation-card"
@@ -130,7 +130,7 @@
                             <div class="feature-item">
                                 <div class="icon">🏘️</div>
                                 <div>
-                                    <h4>80% Directly to Dogs</h4>
+                                    <h4>(BLANK) Directly to Dogs</h4>
                                     <p>Funding the spa days, outdoor adventures, and care packages you see on this site.
                                     </p>
                                 </div>
@@ -138,14 +138,14 @@
                             <div class="feature-item">
                                 <div class="icon">🏥</div>
                                 <div>
-                                    <h4>15% Emergency Care</h4>
+                                    <h4>(BLANK) Emergency Care</h4>
                                     <p>A reserve fund for unexpected medical needs for the dogs in our program.</p>
                                 </div>
                             </div>
                             <div class="feature-item">
                                 <div class="icon">⚙️</div>
                                 <div>
-                                    <h4>5% Operations</h4>
+                                    <h4>(BLANK) Operations</h4>
                                     <p>Keeping the platform running and facilitating communication between donors and
                                         shelters.</p>
                                 </div>
