--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
 
           <div class="hero-stats">
             <div class="stat-item">
-              <div class="stat-number" data-count="2450">0</div>
+              <div class="stat-number">(BLANK)</div>
               <div class="stat-label">Dogs Helped</div>
             </div>
             <div class="stat-item">
-              <div class="stat-number" data-count="850">0</div>
+              <div class="stat-number">(BLANK)</div>
               <div class="stat-label">Adopted</div>
             </div>
             <div class="stat-item">
-              <div class="stat-number" data-count="15000">0</div>
+              <div class="stat-number">(BLANK)</div>
               <div class="stat-label">Experiences Given</div>
             </div>
           </div>
@@ -230,25 +230,25 @@
         <div class="impact-grid">
           <div class="impact-card card fade-in">
             <div class="impact-icon">🛁</div>
-            <div class="impact-number" data-count="3200">0</div>
+            <div class="impact-number">(BLANK)</div>
             <div class="impact-label">Spa Days Given</div>
           </div>
 
           <div class="impact-card card fade-in">
             <div class="impact-icon">🌳</div>
-            <div class="impact-number" data-count="5800">0</div>
+            <div class="impact-number">(BLANK)</div>
             <div class="impact-label">Adventures Sponsored</div>
           </div>
 
           <div class="impact-card card fade-in">
             <div class="impact-icon">🎁</div>
-            <div class="impact-number" data-count="12400">0</div>
+            <div class="impact-number">(BLANK)</div>
             <div class="impact-label">Care Packages Sent</div>
           </div>
 
           <div class="impact-card card fade-in">
             <div class="impact-icon">🏠</div>
-            <div class="impact-number" data-count="850">0</div>
+            <div class="impact-number">(BLANK)</div>
             <div class="impact-label">Dogs Adopted</div>
           </div>
         </div>
