--- a/packages.html
+++ b/packages.html
@@ -209,7 +209,7 @@
                 <div class="grid grid-3">
                     <div class="pricing-card card fade-in">
                         <h3>Starter Box</h3>
-                        <div class="pricing-amount">$25</div>
+                        <div class="pricing-amount">(BLANK)</div>
                         <div class="pricing-period">per dog</div>
                         <ul style="list-style: none; margin: var(--space-6) 0; text-align: left;">
                             <li style="padding: var(--space-2) 0;">✓ 1 toy (matched to dog)</li>
@@ -221,7 +221,7 @@
 
                     <div class="pricing-card card featured fade-in">
                         <h3>Joy Box</h3>
-                        <div class="pricing-amount">$45</div>
+                        <div class="pricing-amount">(BLANK)</div>
                         <div class="pricing-period">per dog</div>
                         <ul style="list-style: none; margin: var(--space-6) 0; text-align: left;">
                             <li style="padding: var(--space-2) 0;">✓ 2 toys (variety)</li>
@@ -235,7 +235,7 @@
 
                     <div class="pricing-card card fade-in">
                         <h3>Ultimate Box</h3>
-                        <div class="pricing-amount">$75</div>
+                        <div class="pricing-amount">(BLANK)</div>
                         <div class="pricing-period">per dog</div>
                         <ul style="list-style: none; margin: var(--space-6) 0; text-align: left;">
                             <li style="padding: var(--space-2) 0;">✓ 4 premium toys</li>
