--- a/dayout.html
+++ b/dayout.html
@@ -195,7 +195,7 @@
                 <div class="grid grid-3">
                     <div class="pricing-card card fade-in">
                         <h3>Quick Outing</h3>
-                        <div class="pricing-amount">$35</div>
+                        <div class="pricing-amount">(BLANK)</div>
                         <div class="pricing-period">1-2 hours</div>
                         <ul style="list-style: none; margin: var(--space-6) 0; text-align: left;">
                             <li style="padding: var(--space-2) 0;">✓ Park walk or play</li>
@@ -207,7 +207,7 @@
 
                     <div class="pricing-card card featured fade-in">
                         <h3>Full Day Out</h3>
-                        <div class="pricing-amount">$65</div>
+                        <div class="pricing-amount">(BLANK)</div>
                         <div class="pricing-period">4-5 hours</div>
                         <ul style="list-style: none; margin: var(--space-6) 0; text-align: left;">
                             <li style="padding: var(--space-2) 0;">✓ Extended adventure</li>
@@ -221,7 +221,7 @@
 
                     <div class="pricing-card card fade-in">
                         <h3>Ultimate Adventure</h3>
-                        <div class="pricing-amount">$95</div>
+                        <div class="pricing-amount">(BLANK)</div>
                         <div class="pricing-period">Full day + extras</div>
                         <ul style="list-style: none; margin: var(--space-6) 0; text-align: left;">
                             <li style="padding: var(--space-2) 0;">✓ Everything in Full</li>
