--- a/impact.html
+++ b/impact.html
@@ -69,19 +69,19 @@
             <div class="container">
                 <div class="grid grid-4" style="gap: var(--space-6);">
                     <div class="card impact-card fade-in">
-                        <div class="impact-number" data-count="15000" data-suffix="+">0</div>
+                        <div class="impact-number">(BLANK)</div>
                         <p class="impact-label">Experiences Sponsered</p>
                     </div>
                     <div class="card impact-card fade-in">
-                        <div class="impact-number" data-count="2450">0</div>
+                        <div class="impact-number">(BLANK)</div>
                         <p class="impact-label">Dogs Supported</p>
                     </div>
                     <div class="card impact-card fade-in">
-                        <div class="impact-number" data-count="850">0</div>
+                        <div class="impact-number">(BLANK)</div>
                         <p class="impact-label">Successful Adoptions</p>
                     </div>
                     <div class="card impact-card fade-in">
-                        <div class="impact-number" data-count="12" data-suffix="k">0</div>
+                        <div class="impact-number">(BLANK)</div>
                         <p class="impact-label">Volunteer Hours Logged</p>
                     </div>
                 </div>
@@ -152,31 +152,31 @@
                         <div class="card card-glass">
                             <div style="display: flex; justify-content: space-between; margin-bottom: var(--space-2);">
                                 <span>Direct Experiences (Spa, Outings, Packages)</span>
-                                <strong>70%</strong>
+                                <strong>(BLANK)</strong>
                             </div>
                             <div
                                 style="width: 100%; height: 8px; background: #eee; border-radius: 4px; margin-bottom: var(--space-4);">
-                                <div style="width: 70%; height: 100%; background: var(--primary); border-radius: 4px;">
+                                <div style="width: 100%; height: 100%; background: var(--primary); border-radius: 4px;">
                                 </div>
                             </div>
 
                             <div style="display: flex; justify-content: space-between; margin-bottom: var(--space-2);">
                                 <span>Wellness & Emergency Health Fund</span>
-                                <strong>20%</strong>
+                                <strong>(BLANK)</strong>
                             </div>
                             <div
                                 style="width: 100%; height: 8px; background: #eee; border-radius: 4px; margin-bottom: var(--space-4);">
                                 <div
-                                    style="width: 20%; height: 100%; background: var(--secondary); border-radius: 4px;">
+                                    style="width: 100%; height: 100%; background: var(--secondary); border-radius: 4px;">
                                 </div>
                             </div>
 
                             <div style="display: flex; justify-content: space-between; margin-bottom: var(--space-2);">
                                 <span>Operational & Tech Platform</span>
-                                <strong>10%</strong>
+                                <strong>(BLANK)</strong>
                             </div>
                             <div style="width: 100%; height: 8px; background: #eee; border-radius: 4px;">
-                                <div style="width: 10%; height: 100%; background: var(--accent); border-radius: 4px;">
+                                <div style="width: 100%; height: 100%; background: var(--accent); border-radius: 4px;">
                                 </div>
                             </div>
                         </div>
