implement context-aware page themes

--- a/packages.html
+++ b/packages.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="theme-packages">
     <div id="canvas-container"></div>
 
     <!-- Navigation -->
