--- a/dayout.html
+++ b/dayout.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="theme-dayout">
     <div id="canvas-container"></div>
 
     <!-- Navigation -->
